name:                lens-zipper
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/clojj/lens-zipper#readme
license:             BSD3
license-file:        LICENSE
author:              na
maintainer:          na
copyright:           na
category:            na
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lens-zipper-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens-zipper
                     , lens
                     , zippers
                     , containers
  default-language:    Haskell2010

test-suite lens-zipper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lens-zipper
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/clojj/lens-zipper
